Changed to a black background and personalized text

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
        
         <section class="wrapper">
             <div class="div-1">
-                Div 1
+                <p> Box number 1! Stuff stuff stuff stuff stuff</p>
             </div>
             <div class="div-2">
-                Div 2
+                <p>Box number 2! Things things things things things things</p>
             </div>
             <div class="div-3">
-                Div 3
+                <p>Box number 3! stuff n things stuff n things stuff n things stuff n things</p>
             </div>
         </section>    
 
