Add header description footer and logos

--- a/index.html
+++ b/index.html
@@ -20,7 +20,17 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+
+        <header>
+            <h1>Hi, I'm Caro.</h1>
+        </header>
        
+        <section class="description">
+            <p>I'm a <span>Responsive Designer & Developer</span> who thrives on visual storytelling. When I'm not working, pursuing side projects or getting lost in the rabbit hole of blogs & books, I can be found traveling, hiking and searching for new stories.</p>
+
+        </section>
+
+
         <section class="wrapper">
             <div class="div-1">
                 <p> Box number 1! Stuff stuff stuff stuff stuff</p>
@@ -29,9 +39,15 @@
                 <p>Box number 2! Things things things things things things</p>
             </div>
             <div class="div-3">
-                <p>Box number 3! stuff n things stuff n things stuff n things stuff n things</p>
+                <p>Box number 3! stuff n things stuff n things</p>
             </div>
-        </section>    
+        </section>   
+        
+        <footer>
+            <a href="https://www.linkedin.com/" target="_blank"><img src="img/linked.png" alt="linked in logo"> </a>
+            <a href="https://www.twitter.com/" target="_blank"><img src="img/twitter.png" alt="twitter logo"> </a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="img/instagram.png" alt="instagram logo"></a>
+        </footer>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
